--- a/style.css
+++ b/style.css
@@ -2,14 +2,17 @@ body,
 canvas {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 body {
-    display: flex;
-    background-color: black;
-    justify-content: center;
 }
 
 div {
     margin-left: 50px;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
 }
